Fix #1539: z-index issue with pinned data grid columns and horizontal scrolling

--- a/src/Smartstore.Web/wwwroot/components/datagrid/datagrid.scss
+++ b/src/Smartstore.Web/wwwroot/components/datagrid/datagrid.scss
@@ -448,7 +448,7 @@ input.form-control-plaintext {
     .dg-col-pinned {
         position: sticky !important;
         overflow-x: visible !important;
-        z-index: 5;
+        z-index: 20;
 
         &.dg-th {
             z-index: 10;
